# a-stock-agent

./: .gitignore  Dockerfile  README.md  __init__.py  api_server.py  broker.py  cli.py  docker-compose.yml  factor_engine.py  ml_model.py  paper_trading.py  pyproject.toml  requirements.txt  watchlist.py
.github/workflows/: ci.yml
agent/: __init__.py  config.py  config_file.py  core.py  llm.py  market_state.py  notifier.py  trader.py
analysis/: __init__.py  adaptive_weights.py  capital_flow.py  enhanced_scoring.py  fundamental.py  multi_timeframe.py  scoring.py  technical.py
backtest/: __init__.py  engine.py  enhanced.py  metrics.py  portfolio.py
data/: __init__.py  fundamental.py  market.py  news.py  store.py
risk/: __init__.py
strategy/: __init__.py  base.py  factory.py  grid.py  mean_reversion.py  momentum.py  trend.py  value.py
tests/: __init__.py  conftest.py  test_analysis.py  test_api_server.py  test_backtest.py  test_broker.py  test_config_file.py  test_factor_engine.py  test_market_data.py  test_market_state.py  test_ml_model.py  test_new_strategies.py  test_paper_trading.py  test_portfolio.py  test_risk_llm.py  test_store.py  test_strategy.py  test_technical.py  test_watchlist.py
web/: app.py  dashboard.html  server.py
