[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "a-stock-agent"
version = "1.0.0"
description = "A股量化交易 Agent — 技术分析 + 基本面评估 + 策略信号 + 回测引擎"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "WindRiders"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.10"
dependencies = [
    "akshare>=1.18.0",
    "baostock>=0.9.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "ta>=0.11.0",
    "matplotlib>=3.7.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "requests>=2.28",
]

[project.scripts]
a-stock-agent = "cli:main"

[tool.setuptools]
packages = ["agent", "data", "analysis", "strategy", "backtest"]
py-modules = ["cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "network: tests that require network access",
]